test/files/neg/macro-invalidimpl-d.check
Macros_Test_2.scala:2: error: macro implementation must be in statically accessible object
  def foo(x: Any) = macro Impls.foo
                                ^
one error found
